--- a/FPS.uproject
+++ b/FPS.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.5",
+	"EngineAssociation": "{B1AEF15E-4052-7FCD-93C0-72A4CBAE7723}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
